--- a/src/components/home-content/homeContent.css
+++ b/src/components/home-content/homeContent.css
@@ -1,3 +1,5 @@
+@import "../fonts/fonts.css";
+
 .home-container {
   display: flex;
   flex-direction: column;
@@ -5,5 +7,7 @@
   justify-content: center;
   height: 100vh;
   width: 100%;
-  background-color: rgb(255, 0, 0);
+  font-family: patron-m;
+  color: black;
+  background-color: rgb(255, 255, 255);
 }
