--- a/src/components/contact-content/ContactContent.css
+++ b/src/components/contact-content/ContactContent.css
@@ -1,6 +1,6 @@
 @import "../fonts/fonts.css";
 
-.hi-container {
+.hi-ccontainer {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -8,6 +8,38 @@
   height: 100vh;
   width: 100%;
   font-family: patron-m;
+
+  /* background: linear-gradient(to right, #ffb3ba, #ffdfba, #ffffba); */
+
   color: black;
-  background-color: rgb(255, 255, 255);
+  background: radial-gradient(
+    circle at center,
+    #ff9a9e,
+    #fad0c4,
+    #fad0c4,
+    #fbc2eb,
+    #a6c1ee,
+    #e2f5b5,
+    #b3f7bc
+  );
+  background-size: 400% 400%;
+  animation: gradient-animation 15s ease infinite;
+}
+
+@keyframes gradient-animation {
+  0% {
+    background-position: 0% 50%;
+  }
+  25% {
+    background-position: 50% 50%;
+  }
+  50% {
+    background-position: 50% 100%;
+  }
+  75% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
