--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,20 +1,19 @@
 @import "../fonts/fonts.css";
 .navbar {
-  font-family: DM-sans2;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
-  width: 90%;
+  width: 100%;
   height: 70px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: rgba(13, 18, 33, 0.6);
+  background-color: rgba(13, 18, 33, 0.4);
   backdrop-filter: blur(10px);
   justify-self: center;
-  margin-top: 20px;
-  border-radius: 50px 50px 50px 50px;
+  /* margin-top: 20px; */
+  border-radius: 0px 0px 50px 50px;
   box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
   z-index: 1000;
 }
@@ -68,15 +67,18 @@
 
 .navbar-links {
   display: flex;
-  gap: 24px;
+  gap: 28px;
+  font-family: manrope;
+  font-weight: 500;
+  font-size: 1rem;
 }
 
 .navbar-links a {
-  color: #8b93a7; /* Light gray for non-active links */
+  color: #636876; /* Light gray for non-active links */
   text-decoration: none;
-  font-weight: 500;
   position: relative;
   transition: color 0.2s;
+  text-transform: uppercase;
 }
 
 .navbar-links a::after {
@@ -85,7 +87,7 @@
   width: 100%;
   transform: scaleX(0);
   height: 1px;
-  bottom: -2px;
+  bottom: -1px;
   left: 0;
   background-color: #ffffff; /* White for the underline */
   transform-origin: bottom right;
