--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -6,29 +6,74 @@
   left: 0;
   right: 0;
   width: 100%;
-  height: 70px;
+  height: 65px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: rgba(13, 18, 33, 0.4);
+  /* background-color: rgba(13, 18, 33, 0.2); */
   backdrop-filter: blur(10px);
-  border-radius: 0px 0px 50px 50px;
-  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
+  /* border-radius: 0px 0px 50px 50px; */
+  /* box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2); */
   transition: all 0.3s ease-in-out;
   z-index: 1000;
 }
 
 .navbar-scrolled {
-  height: 50px;
-  background-color: rgba(13, 18, 33, 0.8);
+  /* height: 60px; */
+  background-color: rgba(13, 18, 33, 0.6);
   box-shadow: 0 4px 16px rgba(0, 0, 0, 0.3);
-  border-radius: 0px 0px 30px 30px;
+  border-radius: 0px 0px 60px 60px;
+  transition: all 0.3s ease-in-out; /* Smooth transition */
+  .navbar-links {
+    /* font-size: 0.9rem; */
+    /* gap: 38px; */
+    transition: all 0.3s ease-in-out; /* Smooth transition */
+    a {
+      transition: color 0.3s ease-in-out; /* Smooth transition */
+      color: rgba(200, 200, 200, 0.733);
+    }
+  }
+  .navbar-links a::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 1px;
+    bottom: -1px;
+    left: 0;
+    background-color: #ffffff;
+    transform-origin: bottom right;
+    transition: transform 0.3s ease-out;
+  }
+
+  .navbar-links a:hover,
+  .navbar-links a.active {
+    color: #ffffff;
+  }
+  .btn-download {
+    color: #ffffff;
+    background-color: rgba(255, 255, 255, 0.2);
+    border: none;
+    border-radius: 50px;
+    padding: 8px 24px;
+    cursor: pointer;
+    transition: background-color 0.2s;
+    margin-right: 50px;
+  }
+  .btn-download:hover {
+    background-color: rgba(255, 255, 255, 0.4);
+  }
+  .logo {
+    animation: all 0.3s ease-in-out;
+    filter: invert(0%);
+  }
 }
 
 .logo {
   display: flex;
   align-items: center;
-  animation: fadeIn 1s ease-in-out;
+  /* animation: fadeIn 1s ease-in-out; */
+  filter: invert(100%);
 }
 
 .logo img {
@@ -38,15 +83,80 @@
   transition: height 0.3s ease-in-out;
 }
 
-.navbar-scrolled .logo img {
-  height: 30px;
-}
-
 .menu-icon {
   display: none;
   font-size: 1.8rem;
   color: white;
   cursor: pointer;
+}
+
+.navbar-links {
+  display: flex;
+  gap: 28px;
+  font-family: inter-thin;
+  font-weight: 400;
+  font-size: 1rem;
+}
+
+.navbar-links a {
+  color: #636876bb;
+  text-decoration: none;
+  position: relative;
+  transition: color 0.2s;
+  /* text-transform: uppercase; */
+}
+
+.navbar-links a::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 1px;
+  bottom: -1px;
+  left: 0;
+  background-color: #000000;
+  transform-origin: bottom right;
+  transition: transform 0.3s ease-out;
+}
+
+.navbar-links a:hover,
+.navbar-links a.active {
+  color: #000000;
+}
+
+.navbar-links a:hover::after,
+.navbar-links a.active::after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+
+.navbar-actions {
+  display: flex;
+  gap: 6px;
+}
+
+.btn-login {
+  color: #ffffff;
+  background: transparent;
+  border: none;
+  padding: 8px 16px;
+  cursor: pointer;
+}
+
+.btn-download {
+  color: #000000;
+  background-color: rgb(0, 0, 0, 0.2);
+  border: none;
+  border-radius: 50px;
+  padding: 8px 24px;
+  cursor: pointer;
+  transition: background-color 0.2s;
+  margin-right: 50px;
+  font-family: worksans-n5;
+}
+
+.btn-download:hover {
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 /* Mobile and Tablet styles */
@@ -87,72 +197,4 @@
   .menu-icon {
     display: block;
   }
-}
-
-.navbar-links {
-  display: flex;
-  gap: 28px;
-  font-family: manrope;
-  font-weight: 500;
-  font-size: 1rem;
-}
-
-.navbar-links a {
-  color: #636876;
-  text-decoration: none;
-  position: relative;
-  transition: color 0.2s;
-  text-transform: uppercase;
-}
-
-.navbar-links a::after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  transform: scaleX(0);
-  height: 1px;
-  bottom: -1px;
-  left: 0;
-  background-color: #ffffff;
-  transform-origin: bottom right;
-  transition: transform 0.3s ease-out;
-}
-
-.navbar-links a:hover,
-.navbar-links a.active {
-  color: #ffffff;
-}
-
-.navbar-links a:hover::after,
-.navbar-links a.active::after {
-  transform: scaleX(1);
-  transform-origin: bottom left;
-}
-
-.navbar-actions {
-  display: flex;
-  gap: 6px;
-}
-
-.btn-login {
-  color: #ffffff;
-  background: transparent;
-  border: none;
-  padding: 8px 16px;
-  cursor: pointer;
-}
-
-.btn-download {
-  color: #ffffff;
-  background-color: rgba(255, 255, 255, 0.1);
-  border: none;
-  border-radius: 50px;
-  padding: 8px 24px;
-  cursor: pointer;
-  transition: background-color 0.2s;
-  margin-right: 50px;
-}
-
-.btn-download:hover {
-  background-color: rgba(255, 255, 255, 0.2);
 }
