--- a/src/components/contact-content/ContactContent.css
+++ b/src/components/contact-content/ContactContent.css
@@ -11,10 +11,9 @@
 
   /* background: linear-gradient(to right, #ffb3ba, #ffdfba, #ffffba); */
 
-  color: black;
   background: radial-gradient(
     circle at center,
-    #ff9a9e,
+    #ffffff,
     #fad0c4,
     #fad0c4,
     #fbc2eb,
@@ -43,3 +42,104 @@
     background-position: 0% 50%;
   }
 }
+
+
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  background-color: #ffffff;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  text-align: center;
+}
+
+.input-group {
+  margin-bottom: 15px;
+}
+
+.label {
+  display: block;
+  margin-bottom: 5px;
+  text-align: left;
+  color: #000000;
+}
+
+input, textarea {
+  width: 100%;
+  padding: 10px;
+  border-radius: 0px;
+  color: #000;
+  background-color: rgb(255, 255, 255); 
+  transition: border-color 0.3s;
+}
+
+input:focus, textarea:focus {
+  border-color: #007BFF;
+  outline: none;
+}
+
+.map-container {
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.map {
+  width: 100%;
+  height: 100%;
+  border: none;
+}
+
+.button {
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+  background-color: #007BFF;
+  color: #000000;
+  cursor: pointer;
+  transition: background-color 0.3s, box-shadow 0.3s;
+}
+
+button[type="submit"]:hover {
+  background-color: #0056b3;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+}
+
+.contact-content p {
+  margin-top: 10px;
+  color: #ff0; /* Ensure text color is yellow */
+}
+
+/* .texts-container {
+  color: #fff;
+  font-size: 2rem;
+  font-family: 'Arial', sans-serif;
+  display: flex;
+  gap: 10px;
+  animation: fadein 2s ease-in-out infinite;
+}
+
+.texts-container span {
+  animation: preloaderText 1s infinite alternate;
+} */
+/* 
+@keyframes preloaderText {
+  0% {
+    transform: translateY(0);
+    opacity: 0.5;
+  }
+  100% {
+    transform: translateY(-10px);
+    opacity: 1;
+  }
+} */
+
+/* @keyframes fadein {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+} */
