--- a/src/components/courses-content/coursesContent.css
+++ b/src/components/courses-content/coursesContent.css
@@ -5,6 +5,27 @@
   flex-direction: column;
 }
 
+.vid {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* position: absolute; */
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  object-fit: cover;
+  margin-top: 6%;
+  video {
+    display: flex;
+    justify-content: center;
+    border: #000000 3px solid;
+    align-items: center;
+    width: 70%;
+    height: 70%;
+    border-radius: 10px;
+    object-fit: contain;
+  }
+}
 .hero-section {
   display: flex;
   flex-direction: column;
@@ -13,12 +34,12 @@
   height: 100vh;
   width: 100%;
   color: rgb(0, 0, 0);
-  background: white;
   h1 {
     font-size: 3.5em;
     font-family: "Sofia Pro Bold";
     margin-bottom: 20px;
     color: #333;
+    /* background-color: red; */
     text-align: center;
     text-transform: uppercase;
   }
