--- a/src/components/courses-content/coursesContent.css
+++ b/src/components/courses-content/coursesContent.css
@@ -5,11 +5,10 @@
   flex-direction: column;
 }
 
-.vid {
+/* .vid {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* position: absolute; */
   width: 100%;
   height: 100%;
   border-radius: 10px;
@@ -25,42 +24,63 @@
     border-radius: 10px;
     object-fit: contain;
   }
-}
+} */
 .hero-section {
+  background: url("../../img/vid1.mp4") no-repeat center center;
+  background-size: contain;
   display: flex;
+  /* background-color: red; */
   flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
   width: 100%;
-  color: rgb(0, 0, 0);
-  h1 {
-    font-size: 3.5em;
-    font-family: "Sofia Pro Bold";
-    margin-bottom: 20px;
-    color: #333;
+  padding: 65px;
+  .bg {
+    display: flex;
     /* background-color: red; */
-    text-align: center;
-    text-transform: uppercase;
-  }
-  p {
-    font-size: 1.1em;
-    /* line-height: 1.5em; */
-    color: #000000;
-    text-align: center;
-    margin-bottom: 20px;
-    width: 80%;
-  }
-  button {
-    margin-top: 20px;
-    padding: 10px 20px;
-    background: #2563eb;
-    color: white;
-    border: none;
-    font-size: 1.1em;
-    font-family: "Sofia Pro Bold";
-    text-transform: uppercase;
-    cursor: pointer;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    /* width: 100%; */
+    /* padding: 60px; */
+    color: #ffffff;
+    video {
+      position: absolute;
+      z-index: -1;
+      /* border: #ffea00 3px solid; */
+      align-items: center;
+      width: 100%;
+      height: 84%;
+      overflow: hidden;
+      object-fit: cover;
+    }
+    h1 {
+      font-size: 3.5em;
+      font-family: "Sofia Pro Bold";
+      margin-bottom: 20px;
+      /* background-color: red; */
+      text-align: center;
+      text-transform: uppercase;
+    }
+    p {
+      font-size: 1.1em;
+      /* line-height: 1.5em; */
+      text-align: center;
+      margin-bottom: 20px;
+      width: 80%;
+    }
+    button {
+      margin-top: 20px;
+      padding: 10px 20px;
+      background: #2563eb;
+      color: white;
+      border: none;
+      font-size: 1.1em;
+      font-family: "Sofia Pro Bold";
+      text-transform: uppercase;
+      cursor: pointer;
+    }
   }
 }
 
