--- a/src/components/home-content/homeContent.css
+++ b/src/components/home-content/homeContent.css
@@ -41,110 +41,69 @@
 .highlight {
   color: #2563eb;
 }
-
 .buttons {
   margin: 30px 0;
+  display: flex;
+  gap: 20px;
 }
 
-.buttons .primary-btn {
-  background: #2563eb;
+.button-underline {
+  text-transform: uppercase;
+  font-size: 16px;
+  width: 12rem;
+  padding: 0.75rem 0;
+  border-radius: 1.625rem;
+  font-weight: 700;
+  align-content: center;
+  justify-content: center;
+  justify-items: center;
+  align-items: center;
+  align-self: center;
+  text-align: center;
+  border: 0.5px solid rgba(0, 0, 0, 0.619);
+  text-decoration: none;
+  color: #161616;
+  position: relative;
+  overflow: hidden;
+  transition: all 0.5s ease;
+  z-index: 4;
+}
+.button-underline:after {
+  content: " ";
+  position: absolute;
+  display: inline-flex;
+  right: 0;
+  top: 0;
+  width: 0%;
+  height: 100%;
+  background-color: #000000;
+  transition: all 0.5s ease;
+  color: #ffffff;
+  z-index: -1;
+}
+
+.button-underline:hover::after {
+  width: 100%;
+  right: unset;
+  left: 0;
+}
+.button-underline:hover {
+  color: #ffffff;
+}
+
+.button-gradient {
+  padding: 12px 24px;
+  border-radius: 50px;
+  font-weight: 500;
+  background: linear-gradient(90deg, #ff7eb3, #ff758c);
   color: white;
-  padding: 12px 20px;
   border: none;
-  border-radius: 8px;
-  font-size: 16px;
   cursor: pointer;
-  margin-right: 10px;
-  position: relative;
-  overflow: hidden;
-  transition: color 0.4s ease;
+  transition: background 0.3s ease-in-out;
 }
 
-.buttons .primary-btn:hover {
-  color: #000000;
-  z-index: 3; 
-  background-color: black;
-  border: 2px solid black;
-
-}
-
-.buttons .primary-btn::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgb(255, 255, 255);
-  transition: transform 0.4s ease;
-  z-index: 0;
-  transform: translateX(-100%);
-}
-
-.buttons .primary-btn:hover::before {
-  transform: translateX(0);
-}
-
-.buttons .primary-btn:hover::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgb(255, 255, 255);
-  transition: transform 0.4s ease;
-  z-index: 0;
-  transform: translateX(100%);
-  color: black;
-}
-
-.buttons .secondary-btn {
-  background: #fff;
-  color: #2563eb;
-  padding: 12px 20px;
-  border: 1px solid #2563eb;
-  border-radius: 8px;
-  font-size: 16px;
-  cursor: pointer;
-  position: relative;
-  overflow: hidden;
-  transition: color 0.4s ease;
-}
-
-.buttons .secondary-btn:hover {
-  color: white;
-  z-index: 1; /* Ensure text is above the background */
-}
-
-.buttons .secondary-btn::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: #2563eb;
-  transition: transform 0.4s ease;
-  z-index: -2;
-  transform: translateX(-100%);
-}
-
-.buttons .secondary-btn:hover::before {
-  transform: translateX(0);
-}
-
-.buttons .secondary-btn:hover::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: #2563eb;
-  transition: transform 0.4s ease;
-  z-index: 0;
-  transform: translateX(100%);
+.button-gradient:hover {
+  background: linear-gradient(90deg, #ff758c, #ff7eb3);
 }
 
 .students {
@@ -154,7 +113,18 @@
   color: black;
 }
 
+@keyframes float {
+  0%,
+  100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-20px);
+  }
+}
+
 .image-container {
+  animation: float 6s ease-in-out infinite;
   position: relative;
   display: flex;
   align-items: center;
@@ -215,11 +185,11 @@
   justify-content: space-between;
   padding: 50px 50px;
   background: #ffffff;
-  height: 140vh;
+  height: auto;
   .s2content {
     display: flex;
     flex-direction: column;
-    max-width: 50%;
+    max-width: 60%;
     align-items: center;
     /* background-color: red; */
     h1 {
@@ -228,6 +198,7 @@
       font-weight: 700;
       margin: 20px 0;
       color: #111;
+      text-align: center;
       text-transform: uppercase;
       /* background-color: pink; */
     }
@@ -235,6 +206,7 @@
       /* background-color: yellow; */
       font-size: 1rem;
       text-align: center;
+      width: 90%;
       color: #6b7280;
       font-weight: 100;
       font-family: worksans-n5;
@@ -318,15 +290,15 @@
 .s2img {
   width: 75%;
   height: 100%;
-  background: no-repeat center center/cover;
+  /* background: no-repeat center center/cover; */
   border-radius: 12px;
-  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.4);
+  /* box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.4); */
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   margin-top: 20px;
   img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    /* object-fit: cover; */
     /* border-radius: 12px; */
   }
 }
@@ -390,32 +362,43 @@
 /* PG-1 Section-4 */
 .student-reviews-section {
   padding: 4rem 1rem;
-  background-color: #bbd4ff;
-}
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  /* background-color: #bbd4ff; */
 
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-  text-align: left;
+  .container {
+    /* background-color: red; */
+    max-width: 1200px;
+    width: 100%;
+    /* margin: 0 auto; */
+    text-align: left;
+  }
 }
 
 .section-title {
   font-size: 2.5rem;
-  color: #2d3748;
+  color: #000000;
   margin-bottom: 3rem;
+  text-align: center;
+  font-family: DM-Sans2;
+  font-weight: 600;
 }
 
 .reviews-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+  gap: 2rem;
 }
 
 .review-card {
   background-color: #ffffff;
   border-radius: 16px;
   padding: 2rem;
-  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.07);
+  box-shadow: -10px -10px 20px rgba(0, 0, 0, 0.1),
+    10px 10px 20px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
@@ -446,12 +429,11 @@
   padding: 4rem 1rem;
   background-color: #c6f8d5;
   /* min-height: 120vh; */
-}
-
-.container {
-  max-width: 900px;
-  margin: 0 auto;
-  /* text-align: center; */
+  .container {
+    max-width: 900px;
+    margin: 0 auto;
+    /* text-align: center; */
+  }
 }
 
 .section-title {
