--- a/src/components/contact-content/ContactContent.css
+++ b/src/components/contact-content/ContactContent.css
@@ -1,28 +1,39 @@
 @import "../fonts/fonts.css";
 
+.section2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 25vh 0 35px 0;
+  height: 20vh;
+  justify-self: center;
+  width: 80%;
+  border-bottom: 1px solid #0000007b;
+  h1 {
+    color: rgb(0, 0, 0);
+    font-family: "Courier New", Courier, monospace;
+    font-size: 24px;
+    font-weight: 700;
+    text-align: center;
+    text-transform: uppercase;
+    margin-bottom: 15px;
+  }
+}
+
 .hi-ccontainer {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  height: auto;
   width: 100%;
-  font-family: patron-m;
+  /* font-family: patron-m; */
 
   /* background: linear-gradient(to right, #ffb3ba, #ffdfba, #ffffba); */
 
-  background: radial-gradient(
-    circle at center,
-    #ffffff,
-    #fad0c4,
-    #fad0c4,
-    #fbc2eb,
-    #a6c1ee,
-    #e2f5b5,
-    #b3f7bc
-  );
-  background-size: 400% 400%;
-  animation: gradient-animation 15s ease infinite;
+  background: linear-gradient(to right, #dbeaf9, #e3f2fd, #fccfc7);
+
+  /* background-size: 400% 400%; */
 }
 
 @keyframes gradient-animation {
@@ -43,7 +54,6 @@
   }
 }
 
-
 .contact-form {
   display: flex;
   flex-direction: column;
@@ -52,6 +62,38 @@
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   text-align: center;
+}
+.headi {
+  color: black;
+  font-size: 28px;
+  font-weight: 700;
+  text-align: center;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+
+FormContainer {
+  /* animation: fadeIn 1s forwards; */
+  width: 50%;
+  height: 80%;
+  background-color: rgba(117, 115, 115, 0.667);
+  backdrop-filter: saturate(180%) blur(15px);
+  border-radius: 10px;
+  justify-content: center;
+  /* align-items: center; */
+  padding: 25px 25px;
+  display: flex;
+  flex-direction: column;
+  h3 {
+    color: #000000;
+    font-family: POPPINS;
+    font-size: 28px;
+    font-weight: 700;
+    text-align: center;
+    margin-bottom: 40px;
+    letter-spacing: 0.5px;
+    text-transform: uppercase;
+  }
 }
 
 .input-group {
@@ -65,17 +107,19 @@
   color: #000000;
 }
 
-input, textarea {
+input,
+textarea {
   width: 100%;
   padding: 10px;
   border-radius: 0px;
   color: #000;
-  background-color: rgb(255, 255, 255); 
+  background-color: rgb(255, 255, 255);
   transition: border-color 0.3s;
 }
 
-input:focus, textarea:focus {
-  border-color: #007BFF;
+input:focus,
+textarea:focus {
+  border-color: #007bff;
   outline: none;
 }
 
@@ -95,7 +139,7 @@ input:focus, textarea:focus {
   padding: 10px;
   border-radius: 5px;
   border: none;
-  background-color: #007BFF;
+  background-color: #007bff;
   color: #000000;
   cursor: pointer;
   transition: background-color 0.3s, box-shadow 0.3s;
@@ -143,3 +187,96 @@ button[type="submit"]:hover {
     opacity: 1;
   }
 } */
+
+/* Main container styling */
+.social-media-container {
+  text-align: center;
+  height: 30vh;
+  width: 100%;
+  background-color: transparent;
+  padding: 20px;
+  color: #fff;
+  font-family: Arial, sans-serif;
+}
+
+/* Title styling */
+.social-media-container .title {
+  font-size: 28px;
+  font-weight: 800;
+  color: #000000;
+  font-family: "Courier New", Courier, monospace;
+  margin-bottom: 20px;
+}
+
+/* Social media list styling */
+.social-media-list {
+  list-style-type: none;
+  display: flex;
+  justify-content: center;
+  /* gap: 16px; */
+  padding: 0;
+  /* background-color: #ffffff; */
+}
+
+.social-media-list li {
+  position: relative;
+  width: 90px;
+  height: 85px;
+  border: 0.1px solid #848484b1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.5s ease;
+}
+
+/* Icon styling */
+.social-media-list li a {
+  /* color: #fff; */
+  background-color: transparent;
+  filter: invert(0);
+  font-size: 24px;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  scale: 1.3;
+  justify-content: center;
+  transform: translateY(0px);
+}
+
+/* Hover effect for icons */
+.social-media-list li:hover {
+  background-color: #ffffff;
+  filter: invert(1);
+  color: #000;
+}
+
+.social-media-list li a i.fa-brands {
+  color: #000000;
+}
+
+.social-media-list li:hover i.fa-brands {
+  transform: translateY(-5px);
+  transition: all 0.3s ease;
+  color: #000;
+}
+
+/* Display text under icon on hover */
+.social-media-list li:hover span {
+  opacity: 1;
+}
+
+/* Hidden label styling */
+.social-media-list li a span {
+  position: absolute;
+  bottom: -13px;
+  font-size: 11px;
+  font-weight: bold;
+  color: #fff;
+  opacity: 0;
+  transition: all 0.3s ease;
+}
+
+/* Show label only when the item is hovered */
+.social-media-list li:hover a span {
+  color: #000;
+}
