--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -31,7 +31,7 @@ footer .containerx {
   display: flex;
   justify-content: space-between;
   width: 100%;
-  height: 50vh;
+  /* height: ; */
   padding: 20px 10vh;
   flex-direction: column;
 }
@@ -46,13 +46,15 @@ footer .containerx {
 .profil .logo_area {
   display: flex;
   align-items: center;
-  margin-bottom: 1rem;
+  height: 20%;
+  overflow: hidden;
+  /* margin-bottom: 1rem; */
 }
 
 .profil .logo_area img {
-  background-color: #1a1a1a; /* Match the dark background */
-  filter: invert(0);
-  width: 35%;
+  filter: invert(100%);
+  width: 20%;
+  height: 20%;
 }
 
 .logo_area .logo_name {
