--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,6 @@
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   /* line-height: 1.5; */
   font-weight: 400;
-
   color-scheme: light dark;
   color: rgb(255, 255, 255);
   background-color: #ffffff;
@@ -19,4 +18,16 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+}
+
+@media (max-width: 1024px) {
+  html, body {
+    overflow-x: hidden; 
+    max-width: 100vw; 
+  }
+
+  * {
+    box-sizing: border-box;
+    max-width: 100%;
+  }
 }
