--- a/src/components/about-content/aboutContent.css
+++ b/src/components/about-content/aboutContent.css
@@ -63,9 +63,9 @@
   display: flex;
   flex-direction: row;
   animation: fadeIn 2s ease-in-out;
-  height: 70vh;
-  padding: 70px 70px;
-  background-color: rgba(250, 235, 215, 0.653);
+  height: 80vh;
+  padding: 60px 120px;
+  background-color: rgba(245, 206, 154, 0.653);
   .mission-content {
     display: flex;
     flex-direction: column;
@@ -91,14 +91,13 @@
     height: 100%;
     /* background-color: #ff0000; */
     /* padding: 20px 0; */
-
     img {
       width: 100%;
       /* -webkit-box-shadow: 0px 0px 31px 2px rgba(0, 0, 0, 0.59);
       -moz-box-shadow: 0px 0px 31px 2px rgba(0, 0, 0, 0.59);
       box-shadow: 0px 0px 31px 2px rgba(0, 0, 0, 0.59); */
       height: 100%;
-      border-radius: 10px;
+      /* border-radius: 10px; */
       object-fit: cover;
     }
   }
